# saferoll

./: 🔧 Build Prompt for Claude_Copilot — Use the Provided Documentation.txt
Stimulator/: Simulator prompt (if you also split this to a third chat).txt
backend/: .gitignore  Dockerfile  Makefile  USAGE.md  docker-compose.yml  pyproject.toml  📘 SAFEROLL - COMPLETE PROJECT DOCUMENTATION.txt
backend/.github/: copilot-instructions.md
backend/app/: README.md  __init__.py  dependencies.py  main.py  metrics.py  policy.py  rings.py  schemas.py  store.py
backend/app/routes/: health.py  metrics.py  rollout.py
backend/app/tests/: test_policy.py  test_routes.py
backend/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
backend/frontend/src/: App.js  App.tsx  api.js  api.ts  index.css  main.js  main.tsx  types.ts
backend/frontend/src/components/: Controls.js  Controls.tsx  Decisions.js  Decisions.tsx  DocsPanel.js  DocsPanel.tsx  RingCard.js  RingCard.tsx  Stat.js  Stat.tsx
backend/saferoll_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/simulator/: README.md  pyproject.toml
backend/simulator/saferoll_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
backend/simulator/simulator/: cli.py
frontend/: PROMPT 2 — Frontend (React + Vite + TS).txt
