[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saferoll-backend"
version = "0.1.0"
description = "SafeRoll FastAPI backend"
readme = "app/README.md"
requires-python = ">=3.11"
authors = [{ name = "PDi" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.5"
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
